--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="index.html">Caitlin Eybers</a>  
       </div>
 
-    <nav>
+    <nav id="nav">
       <ul>
         <li><a href="#aboutMe">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -56,7 +56,7 @@
     <p>I am a self starter and work ethic and creativity are equally important to me. My life revolves around art, music, writing, skateboarding and getting my hands dirty working in a retail store. Front-end development and UX/UI are what I gravitate to most but I am also motivated to keep learning more and more about back-end -- specifically PHP and MySQL.</p>
 
     <div class="wrapperCV">
-      <a href="#" class="buttonCV">View my CV</a>
+      <a href="#" class="button buttonCV">View my CV</a>
     </div>
 
     <p class="techLabel">Technologies I use:</p>
@@ -89,8 +89,46 @@
     <h2>Projects</h2>
 
     <div class="cardContainer">
-      <div class="card card-1"></div>
-      <div class="card card-2"></div>
+
+      <div class="card card-1">
+
+        <img src="#" alt="">
+
+        <a href="#" class="button buttonDemo">
+          <ion-icon name='globe-outline'></ion-icon>
+          Live Demo
+        </a>
+
+        <img src="#" alt="">
+
+        <a href="#" class="button buttonCode">
+          <ion-icon name='logo-github'></ion-icon>
+          View Code
+        </a>
+
+      </div>
+
+      <div class="card card-2">
+
+        <img src="#" alt="">
+
+        <a href="#" class="button buttonDemo">
+          <ion-icon name='globe-outline'></ion-icon>
+          Live Demo
+        </a>
+
+        <img src="#" alt="">
+
+        <a href="#" class="button buttonCode">
+          <ion-icon name='logo-github'></ion-icon>
+          View Code
+        </a>
+
+      </div>
+
+
+      </div>
+
     </div>
 
   </section>
