Fixed mobile nav by changing duplicate id's

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="home">
 
       <div class="navButtons">
-        <ion-icon name="menu-outline" id="navMenu" ></ion-icon>
-        <ion-icon name="close-outline" id="navClose" class="navCloseShift" ></ion-icon>
+        <ion-icon name="menu-outline" id="navMenu" tabindex="0" role="button"></ion-icon>
+        <ion-icon name="close-outline" id="navClose" class="navCloseShift" tabindex="0" role="button"></ion-icon>
       </div>       
   
       <div class="logoContainer">
@@ -37,9 +37,9 @@
 
       <nav id="nav">
         <ul>
-          <li><a href="#aboutMe" id="aboutMe">About Me</a></li>
-          <li><a href="#projects" id="projects">Projects</a></li>
-          <li><a href="#contact" id="contact">Contact</a></li>
+          <li><a href="#aboutMe" id="aboutLink">About Me</a></li>
+          <li><a href="#projects" id="projectsLink">Projects</a></li>
+          <li><a href="#contact" id="contactLink">Contact</a></li>
         </ul>           
       </nav>
 
