--- a/index.html
+++ b/index.html
@@ -102,14 +102,17 @@
 
       <div class="card card-1">
 
-        <img src="#" alt="">
-        <a href="#" class="button buttonDemo">
+        <h3>The Song Series</h3>
+
+        <img src="project1.gif" class="songseriesGIF" alt="A gif displaying my project The Song Series">
+        <p class="cardText">This is a set of three static webpages made with vanilla CSS that are each inspired by one of my favourite songs. My intention with this project was to practice the mobile first approach to creating responsive websites.</p>
+
+        <a href="https://hermit-cait.github.io/song-series/" target="_blank" class="button buttonDemo">
           <ion-icon name='globe-outline'></ion-icon>
           Live Demo
         </a>
 
-        <img src="#" alt="">
-        <a href="#" class="button buttonCode">
+        <a href="https://github.com/hermit-cait/song-series" target="_blank" class="button buttonCode">
           <ion-icon name='logo-github'></ion-icon>
           View Code
         </a>
@@ -118,14 +121,17 @@
 
       <div class="card card-2">
 
-        <img src="#" alt="">
-        <a href="#" class="button buttonDemo">
+        <h3>Portfolio</h3>
+
+        <img src="project2.gif" alt="A gif displaying my portfolio">
+        <p class="cardText">This is my portfolio webpage built using HTML, CSS and Javascript. My plan was to use a very minimalist design and colour scheme with a little touch of bright green.</p>
+
+        <a href="https://hermit-cait.github.io/portfolio/" target="_blank" class="button buttonDemo">
           <ion-icon name='globe-outline'></ion-icon>
           Live Demo
         </a>
 
-        <img src="#" alt="">
-        <a href="#" class="button buttonCode">
+        <a href="https://github.com/hermit-cait/portfolio" target="_blank" class="button buttonCode">
           <ion-icon name='logo-github'></ion-icon>
           View Code
         </a>
