Changed home links to "#" instead of "index.html"

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   
       <div class="logoContainer">
         <div class="logo">          
-          <a href="index.html"><ion-icon name='planet-outline'></ion-icon></a>
+          <a href="#"><ion-icon name='planet-outline'></ion-icon></a>
         </div>
-        <a href="index.html">Caitlin Eybers</a>  
+        <a href="#">Caitlin Eybers</a>  
       </div>    
   
     </div>
