Fixed link to CV

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <p>Vanilla CSS and Javascript are the areas in which I am most comfortable but I am also highly motivated to learn to use libraries like Bootstrap and frameworks like React. I am current busy on a project made with those technologies.</p>
 
     <div class="wrapperCV">
-      <a href="Caitlin Eybers - CV.pdf" target="_blank" class="button buttonCV">View my CV</a>
+      <a href="caitlin_eybers_cv.pdf" target="_blank" class="button buttonCV">View my CV</a>
     </div>
 
   </section>
