Fix logo alignment

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
       <div class="logoContainer">
         <div class="logo">          
-          <a href="#"><ion-icon name='planet-outline'></ion-icon></a>
+          <a href="#"><ion-icon name='planet-outline' class="svgLogo"></ion-icon></a>
         </div>
         <a href="#">Caitlin Eybers</a>  
       </div>    
