--- a/index.html
+++ b/index.html
@@ -138,6 +138,25 @@
 
       </div>
 
+      <div class="card card-3">
+
+        <h3 class="h3Project">Todo List</h3>
+
+        <img src="project3.gif" class="imgProject" alt="A gif displaying my todo list">
+        <p class="cardText">#</p>
+
+        <a href="https://hermit-cait.github.io/todo/" target="_blank" class="button buttonDemo">
+          <ion-icon name='globe-outline'></ion-icon>
+          Live Demo
+        </a>
+
+        <a href="https://github.com/hermit-cait/todo" target="_blank" class="button buttonCode">
+          <ion-icon name='logo-github'></ion-icon>
+          View Code
+        </a>
+
+      </div>
+
     </div>
 
   </section>
