--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 
 <body>
@@ -105,7 +106,8 @@
         <h3>The Song Series</h3>
 
         <img src="project1.gif" class="songseriesGIF" alt="A gif displaying my project The Song Series">
-        <p class="cardText">This is a set of three static webpages made with vanilla CSS that are each inspired by one of my favourite songs. My intention with this project was to practice the mobile first approach to creating responsive websites.</p>
+
+        <p class="cardText cardText-1 auto-height">This is a set of three static webpages made with vanilla CSS that are each inspired by one of my favourite songs. My intention with this project was to practice the mobile first approach to creating responsive websites.</p>
 
         <a href="https://hermit-cait.github.io/song-series/" target="_blank" class="button buttonDemo">
           <ion-icon name='globe-outline'></ion-icon>
@@ -124,7 +126,8 @@
         <h3>Portfolio</h3>
 
         <img src="project2.gif" alt="A gif displaying my portfolio">
-        <p class="cardText">This is my portfolio webpage built using HTML, CSS and Javascript. My plan was to use a very minimalist design and colour scheme with a little touch of bright green.</p>
+
+        <p class="cardText cardText-2 auto-height">This is my portfolio webpage built using HTML, CSS and Javascript. My plan was to use a very minimalist design and colour scheme with a little touch of bright green.</p>
 
         <a href="https://hermit-cait.github.io/portfolio/" target="_blank" class="button buttonDemo">
           <ion-icon name='globe-outline'></ion-icon>
@@ -143,7 +146,8 @@
         <h3 class="h3Project">Todo List</h3>
 
         <img src="project3.gif" class="imgProject" alt="A gif displaying my todo list">
-        <p class="cardText">#</p>
+
+        <p class="cardText cardText-3 auto-height">#</p>
 
         <a href="https://hermit-cait.github.io/todo/" target="_blank" class="button buttonDemo">
           <ion-icon name='globe-outline'></ion-icon>
