Add card paragraph copy

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <img src="project3.gif" class="imgProject" alt="A gif displaying my todo list">
 
-        <p class="cardText cardText-3 auto-height">#</p>
+        <p class="cardText cardText-3 auto-height">This is a to-do list built using React. I made this simple application in order to familiarise myself with a Javascript library. It includes an editing feature, a clear button and I am currently busy integrating localStorage.</p>
 
         <a href="https://hermit-cait.github.io/todo/" target="_blank" class="button buttonDemo">
           <ion-icon name='globe-outline'></ion-icon>
