Add button wrappers

--- a/index.html
+++ b/index.html
@@ -107,17 +107,25 @@
 
         <img src="project1.gif" class="songseriesGIF" alt="A gif displaying my project The Song Series">
 
-        <p class="cardText cardText-1 auto-height">This is a set of three static webpages made with vanilla CSS that are each inspired by one of my favourite songs. My intention with this project was to practice the mobile first approach to creating responsive websites.</p>
+        <div class="buttonWrapper">
 
-        <a href="https://hermit-cait.github.io/song-series/" target="_blank" class="button buttonDemo">
-          <ion-icon name='globe-outline'></ion-icon>
-          Live Demo
-        </a>
+          <a href="https://hermit-cait.github.io/song-series/" target="_blank" class="button buttonDemo">
+            <ion-icon name='globe-outline'></ion-icon>
+            <span>
+              Live Demo
+            </span>
+          </a>
+  
+          <a href="https://github.com/hermit-cait/song-series" target="_blank" class="button buttonCode">
+            <ion-icon name='logo-github'></ion-icon>
+            <span>
+              View Code
+            </span>
+          </a>
 
-        <a href="https://github.com/hermit-cait/song-series" target="_blank" class="button buttonCode">
-          <ion-icon name='logo-github'></ion-icon>
-          View Code
-        </a>
+        </div>
+
+        <p class="cardText cardText-1">This is a set of three static webpages made with vanilla CSS that are each inspired by one of my favourite songs. My intention with this project was to practice the mobile first approach to creating responsive websites.</p>
 
       </div>
 
@@ -127,17 +135,25 @@
 
         <img src="project2.gif" alt="A gif displaying my portfolio">
 
-        <p class="cardText cardText-2 auto-height">This is my portfolio webpage built using HTML, CSS and Javascript. My plan was to use a very minimalist design and colour scheme with a little touch of bright green.</p>
+        <div class="buttonWrapper">
 
-        <a href="https://hermit-cait.github.io/portfolio/" target="_blank" class="button buttonDemo">
-          <ion-icon name='globe-outline'></ion-icon>
-          Live Demo
-        </a>
+          <a href="https://hermit-cait.github.io/portfolio/" target="_blank" class="button buttonDemo">
+            <ion-icon name='globe-outline'></ion-icon>
+            <span>
+              Live Demo
+            </span>
+          </a>
+  
+          <a href="https://github.com/hermit-cait/portfolio" target="_blank" class="button buttonCode">
+            <ion-icon name='logo-github'></ion-icon>
+            <span>
+              View Code
+            </span>
+          </a>
 
-        <a href="https://github.com/hermit-cait/portfolio" target="_blank" class="button buttonCode">
-          <ion-icon name='logo-github'></ion-icon>
-          View Code
-        </a>
+        </div>
+
+        <p class="cardText cardText-2">This is my portfolio webpage built using HTML, CSS and Javascript. My plan was to use a very minimalist design and colour scheme with a little touch of bright green.</p>
 
       </div>
 
@@ -146,18 +162,26 @@
         <h3 class="h3Project">Todo List</h3>
 
         <img src="project3.gif" class="imgProject" alt="A gif displaying my todo list">
+        
+        <div class="buttonWrapper">
 
-        <p class="cardText cardText-3 auto-height">This is a to-do list built using React. I made this simple application in order to familiarise myself with a Javascript library. It includes an editing feature, a clear button and I am currently busy integrating localStorage.</p>
+          <a href="https://hermit-cait.github.io/todo/" target="_blank" class="button buttonDemo">
+            <ion-icon name='globe-outline'></ion-icon>
+            <span>
+              Live Demo
+            </span>
+          </a>
+  
+          <a href="https://github.com/hermit-cait/todo" target="_blank" class="button buttonCode">
+            <ion-icon name='logo-github'></ion-icon>
+            <span>
+              View Code
+            </span>
+          </a>
 
-        <a href="https://hermit-cait.github.io/todo/" target="_blank" class="button buttonDemo">
-          <ion-icon name='globe-outline'></ion-icon>
-          Live Demo
-        </a>
+        </div>
 
-        <a href="https://github.com/hermit-cait/todo" target="_blank" class="button buttonCode">
-          <ion-icon name='logo-github'></ion-icon>
-          View Code
-        </a>
+        <p class="cardText cardText-3">This is a to-do list built using React. I made this simple application in order to familiarise myself with a Javascript library. It includes an editing feature, a clear button and I am currently busy integrating localStorage.</p>
 
       </div>
 
