Remove project3.gif temporarily

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
         <h3 class="h3Project">Todo List</h3>
 
-        <img src="project3.gif" class="imgProject" alt="A gif displaying my todo list">
+        <img src="#" class="imgProject" alt="A gif displaying my todo list">
         
         <div class="buttonWrapper">
 
