Add Wordpress to tech section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
       <span>React</span>
     </div>
 
+    <div class="tech wordpress">
+      <ion-icon name="logo-wordpress"></ion-icon>           
+      <span>WordPress</span>
+    </div>
+
   </section>  
 
   <section class="projects" id="projects">
